# gstssp

./: .gitignore  IMPLEMENTATION.md  README.md  SUCCESS_SUMMARY.md  analyze_video.sh  build.sh  gst-ssp-1.0.pc.in  h265_recording.mkv  launch_h265_stream.sh  meson.build  record_camera.sh  record_camera_qp.sh  record_camera_qp0.sh  record_camera_qp0_lut_display.sh  record_h265_mp4.sh  record_max_quality.sh  record_max_quality_1080_lut.sh  record_uhd.sh  record_uhd_h265.sh  record_zlog.sh  simple_h264_view.sh  test_buffered_stream.sh  test_display_methods.sh  test_dual_stream.sh  test_recording_stream.sh  view_camera.sh  view_h265.sh
Z-Camera-Doc/: ENDPOINT.md
examples/: ssp_receiver.py  test_h265.sh  test_pipelines.sh
luts/Z-Log2/gain +1/: zLog2_zRGB-ax2_32_gain1.cube  zLog2_zRGB-ax2_32_gain1_desatuation.cube
luts/Z-Log2/gain +2/: zLog2_zRGB-ax2_32_gain2.cube  zLog2_zRGB-ax2_32_gain2_desatuation.cube
luts/Z-Log2/gain +4/: zLog2_zRGB-ax2_32_gain4.cube  zLog2_zRGB-ax2_32_gain4_desatuation.cube
luts/Z-Log2/gain -1/: zLog2_zRGB-ax2_32_gain-1.cube  zLog2_zRGB-ax2_32_gain-1_desatuation.cube
luts/Z-Log2/gain -2/: zLog2_zRGB-ax2_32_gain-2.cube  zLog2_zRGB-ax2_32_gain-2_desatuation.cube
luts/Z-Log2/gain -4/: zLog2_zRGB-ax2_32_gain-4.cube  zLog2_zRGB-ax2_32_gain-4_desatuation.cube
luts/Z-Log2/normal/: zLog2_zRGB-ax2_32.cube  zLog2_zRGB-ax2_32_desatuation.cube
src/: gstsspplugin.c  gstsspsrc.cpp  gstsspsrc.h  meson.build  sspthread.cpp  sspthread.h
